# p2pML

./: .gitignore  CMakeLists.txt  sodium.sh  zmq.sh  zmqpp.sh
backup/: client.h  clientfunction.cpp
backup/client/: client.cpp  clientfunction.cpp  clientmain.cpp  df1.csv  localNewton.py  message.proto  message_pb2.py  pyIPC.cpp  pyIPC.h  pyIPC.py
client/: blockchain.py  client.cpp  client.h  clientfunction.cpp  clientmain.cpp  cluster_ips  cluster_ips.bak  cluster_ips_a  cluster_ips_b  data.csv  genData.py  localNewton-nn.py  localNewton.py  message.pb.cc  message.pb.h  network.py  node1_test.csv  node2_test.csv  node2_train.csv  pyIPC.cpp  pyIPC.h  pyIPC.py  test.py
client/datasets/: cosdataset.csv  coshdataset.csv  data10_test.csv  data10_train.csv  data11_test.csv  data11_train.csv  data12_test.csv  data12_train.csv  data1_train.csv  data2_test.csv  data2_train.csv  data3_test.csv  data3_train.csv  data4_test.csv  data4_train.csv  data5_test.csv  data5_train.csv  data6_test.csv  data6_train.csv  data7_test.csv  data7_train.csv  data8_test.csv  data8_train.csv  data9_test.csv  data9_train.csv  test.py
common/: connection.cpp  connection.h  constants.h  network_headers.h
server/: server.cpp  server.h  servermain.cpp
